objects/Copado_Manager__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copado_Manager_Email__c</fullName>
        <label>Copado Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Copado_Manager_Phone__c</fullName>
        <label>Copado Manager Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Documents_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documents Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Salary__c</fullName>
        <label>Manager Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Age__c</fullName>
        <formula>(Today()- DOB__c)/365.23</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>salary_in_rs__c</fullName>
        <formula>Manager_Salary__c*82.79</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>salary in rs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Copado Manager</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Copado Manager Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Copado Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Email_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Copado_Manager_Email__c )</errorConditionFormula>
        <errorDisplayField>Copado_Manager_Email__c</errorDisplayField>
        <errorMessage>Please Enter Email Here........</errorMessage>
    </validationRules>
</CustomObject>